failed to fix issues with the verified-reviews-only checkbox label in dark mode

--- a/site/src/component/Review/Review.scss
+++ b/site/src/component/Review/Review.scss
@@ -15,17 +15,19 @@
   display: flex;
   flex-direction: row;
   gap: 1rem;
-  border: 1px solid red;
+  // border: 1px solid red;
 }
 .sort-dropdown,
 .filter-dropdown {
   min-width: 10rem;
-  border: 1px solid red;
+  // border: 1px solid red;
 }
 .verified-only-checkbox {
+  // TODO: this CSS class is not being applied to the checkbox
   background: none;
   color: var(--text);
-  border: 1px solid red;
+  color: white;
+  // border: 1px solid red;
 }
 
 // subreviews
@@ -143,12 +145,12 @@
   justify-content: left;
   align-items: center;
   color: var(--peterportal-mid-gray);
-  border: 1px solid red;
+  // border: 1px solid red;
 }
 .subreview-author-verified,
 .subreview-author-author {
   margin-left: 0.5rem;
-  border: 1px solid red;
+  // border: 1px solid red;
 }
 
 // tags
@@ -169,14 +171,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border: 1px solid red;
+  // border: 1px solid red;
 }
 // vote on a review
 .subreview-voting {
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
-  border: 1px solid red;
+  // border: 1px solid red;
 }
 .subreview-voting-buttons {
   display: flex;
